decompiler/tests/snapshots/test_tool__x86_64_callconv__func084.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func084 0x4012b4+5 (file 0x12b4)
          4012b4: 8a 44 24 20             mov al,[rsp+20h]
          4012b8: c3                      ret

function type: "func084" func (arg0 *void <TypeID(1v1)>,
                               arg1 *void <TypeID(1v1)>,
                               arg2 small <TypeID(785v1)>,
                               arg3 big <TypeID(795v1)>) uint8_t <TypeID(789v1)>
0 warnings.


mil program = 
program  83 instrs
    0 r12: TypeID(2v1) <- Ancestral(AncestralName("stack_bottom"))
    1 r2: TypeID(2v1) <- Ancestral(AncestralName("CF"))
    2 r3: TypeID(2v1) <- Ancestral(AncestralName("PF"))
    3 r4: TypeID(2v1) <- Ancestral(AncestralName("AF"))
    4 r5: TypeID(2v1) <- Ancestral(AncestralName("ZF"))
    5 r6: TypeID(2v1) <- Ancestral(AncestralName("SF"))
    6 r7: TypeID(2v1) <- Ancestral(AncestralName("TF"))
    7 r8: TypeID(2v1) <- Ancestral(AncestralName("IF"))
    8 r9: TypeID(2v1) <- Ancestral(AncestralName("DF"))
    9 r10: TypeID(2v1) <- Ancestral(AncestralName("OF"))
   10 r11: TypeID(2v1) <- Ancestral(AncestralName("RBP"))
   11 r12: TypeID(2v1) <- Ancestral(AncestralName("RSP"))
   12 r13: TypeID(2v1) <- Ancestral(AncestralName("RIP"))
   13 r14: TypeID(2v1) <- Ancestral(AncestralName("RDI"))
   14 r15: TypeID(2v1) <- Ancestral(AncestralName("RSI"))
   15 r16: TypeID(2v1) <- Ancestral(AncestralName("RAX"))
   16 r17: TypeID(2v1) <- Ancestral(AncestralName("RBX"))
   17 r18: TypeID(2v1) <- Ancestral(AncestralName("RCX"))
   18 r19: TypeID(2v1) <- Ancestral(AncestralName("RDX"))
   19 r20: TypeID(2v1) <- Ancestral(AncestralName("R8"))
   20 r21: TypeID(2v1) <- Ancestral(AncestralName("R9"))
   21 r22: TypeID(2v1) <- Ancestral(AncestralName("R10"))
   22 r23: TypeID(2v1) <- Ancestral(AncestralName("R11"))
   23 r24: TypeID(2v1) <- Ancestral(AncestralName("R12"))
   24 r25: TypeID(2v1) <- Ancestral(AncestralName("R13"))
   25 r26: TypeID(2v1) <- Ancestral(AncestralName("R14"))
   26 r27: TypeID(2v1) <- Ancestral(AncestralName("R15"))
   27 r28: TypeID(2v1) <- Ancestral(AncestralName("ZMM0"))
   28 r29: TypeID(2v1) <- Ancestral(AncestralName("ZMM1"))
   29 r30: TypeID(2v1) <- Ancestral(AncestralName("ZMM2"))
   30 r31: TypeID(2v1) <- Ancestral(AncestralName("ZMM3"))
   31 r32: TypeID(2v1) <- Ancestral(AncestralName("ZMM4"))
   32 r33: TypeID(2v1) <- Ancestral(AncestralName("ZMM5"))
   33 r34: TypeID(2v1) <- Ancestral(AncestralName("ZMM6"))
   34 r35: TypeID(2v1) <- Ancestral(AncestralName("ZMM7"))
   35 r36: TypeID(2v1) <- Ancestral(AncestralName("ZMM8"))
   36 r37: TypeID(2v1) <- Ancestral(AncestralName("ZMM9"))
   37 r38: TypeID(2v1) <- Ancestral(AncestralName("ZMM10"))
   38 r39: TypeID(2v1) <- Ancestral(AncestralName("ZMM11"))
   39 r40: TypeID(2v1) <- Ancestral(AncestralName("ZMM12"))
   40 r41: TypeID(2v1) <- Ancestral(AncestralName("ZMM13"))
   41 r42: TypeID(2v1) <- Ancestral(AncestralName("ZMM14"))
   42 r43: TypeID(2v1) <- Ancestral(AncestralName("ZMM15"))
   43 r45: TypeID(2v1) <- Undefined
   44 r46: TypeID(2v1) <- Undefined
   45 r47: TypeID(2v1) <- Undefined
   46 r48: TypeID(2v1) <- Undefined
   47 r49: TypeID(2v1) <- Undefined
   48 r50: TypeID(2v1) <- Undefined
   49 r51: TypeID(2v1) <- Undefined
   50 r52: TypeID(2v1) <- Undefined
   51 r53: TypeID(2v1) <- Undefined
   52 r54: TypeID(2v1) <- Undefined
   53 r55: TypeID(2v1) <- Undefined
   54 r56: TypeID(2v1) <- Undefined
   55 r57: TypeID(2v1) <- Undefined
   56 r58: TypeID(2v1) <- Undefined
   57 r59: TypeID(2v1) <- Undefined
   58 r60: TypeID(2v1) <- Undefined
   59 r61: TypeID(2v1) <- Undefined
   60 r62: TypeID(2v1) <- Undefined
   61 r63: TypeID(2v1) <- Undefined
   62 r64: TypeID(2v1) <- Undefined
   63 r65: TypeID(2v1) <- Undefined
   64 r45: TypeID(2v1) <- Ancestral(AncestralName("arg0"))
   65 r14: TypeID(2v1) <- Get(r45)
   66 r46: TypeID(2v1) <- Ancestral(AncestralName("arg1"))
   67 r15: TypeID(2v1) <- Get(r46)
   68 r47: TypeID(2v1) <- Ancestral(AncestralName("arg2"))
   69 r48: TypeID(2v1) <- Part { src: r47, offset: 0, size: 8 }
   70 r19: TypeID(2v1) <- Get(r48)
   71 r49: TypeID(2v1) <- Part { src: r47, offset: 8, size: 8 }
   72 r18: TypeID(2v1) <- Get(r49)
0x4012b4:
   73 r46: TypeID(2v1) <- Const { value: 32, size: 8 }
   74 r46: TypeID(2v1) <- Arith(Add, r46, r12)
   75 r45: TypeID(2v1) <- LoadMem { addr: r46, size: 1 }
   76 r47: TypeID(2v1) <- Part { src: r16, offset: 1, size: 7 }
   77 r16: TypeID(2v1) <- Concat { lo: r45, hi: r47 }
0x4012b8:
   78 r45: TypeID(2v1) <- Void
   79 r45: TypeID(2v1) <- Concat { lo: r45, hi: r16 }
   80 r45: TypeID(2v1) <- Part { src: r45, offset: 0, size: 1 }
   81 r47: TypeID(2v1) <- SetReturnValue(r45)
   82 r47: TypeID(2v1) <- Control(Ret)


ssa pre-xform:
ssa program  83 instrs
.B0:    ;;  → Always(Return).
         r11: ? <- Ancestral(AncestralName("RSP"))
         r15: ? <- Ancestral(AncestralName("RAX"))
         r73: ? <- Const { value: 32, size: 8 }
         r74: ? <- Arith(Add, r73, r11)
         r75: ? <- LoadMem { addr: r74, size: 1 }
         r76: ? <- Part { src: r15, offset: 1, size: 7 }
         r77: ? <- Concat { lo: r75, hi: r76 }
         r79: ? <- Concat { lo: r78, hi: r77 }
         r80: ? <- Part { src: r79, offset: 0, size: 1 }
         r81: ? <- SetReturnValue(r80)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r11, r15, r73, r74, r75, r76, r77, r78, r79, r80, r81]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  83 instrs
.B0:    ;;  → Always(Return).
         r11: ? <- Ancestral(AncestralName("RSP"))
         r74: ? <- ArithK(Add, r11, 32)
         r75: ? <- LoadMem { addr: r74, size: 1 }
         r81: ? <- SetReturnValue(r75)



T0: {
  ;
  return [pre:RSP + 32]:1
}
